--- a/client/src/CSS/Activities.css
+++ b/client/src/CSS/Activities.css
@@ -1,77 +1,161 @@
-.itinerary-activities-main-container {
-    width: 100%;
+@media only screen and (min-width: 768px) {
+
+    .itinerary-activities-main-container {
+        width: 100%;
+    }
+
+    .activities-also-nice {
+        background-color: tan;
+        color: rgb(95, 20, 20);
+        border-radius: 10%;
+        font-size: 150%;
+        height: 5%;
+
+    }
+
+    .activities-also-nice:hover {
+        color: white;
+    }
+
+
+    .itinenary-click-here-fore-more-information {
+        padding-bottom: 5%;
+        font-size: 120%;
+        width: 100%;
+
+    }
+
+    .activities-close {
+        color: red;
+        font-size: 200%;
+    }
+
+    .activity-box {
+        display: flex;
+        flex-direction: column;
+
+        background-color: red;
+        width: 125px;
+        height: 150px;
+        padding-top: 2%;
+        margin: 2%;
+
+
+    }
+
+    .activities-title {
+        margin: 0 auto;
+        color: black;
+    }
+
+
+    .activities-content {
+        background-color: white;
+        color: black;
+        border-radius: 10%;
+        width: 100%;
+
+
+    }
+
+
+    .activities-flexer {
+        display: flex;
+        overflow: scroll;
+        height: 150px;
+        width: 100%;
+        flex-direction: column;
+        justify-content: flex-end;
+        flex-wrap: wrap;
+        margin-top: 100px;
+
+
+
+    }
+
+    .activities-image img {
+        width: 70%;
+        height: 100%;
+    }
 }
 
-.activities-also-nice {
-    background-color: tan;
-    color: rgb(95, 20, 20);
-    border-radius: 10%;
-    font-size: 150%;
-    height: 5%;
-
-}
+@media only screen and (max-width: 767px) {
 
 
-.itinenary-click-here-fore-more-information {
-    padding-bottom: 5%;
-    font-size: 120%;
-    width: 100%;
+    .itinerary-activities-main-container {
+        width: 100%;
+    }
 
-}
+    .activities-also-nice {
+        background-color: tan;
+        color: rgb(95, 20, 20);
+        border-radius: 10%;
+        font-size: 150%;
+        height: 5%;
 
-.activities-close {
-    color: red;
-    font-size: 200%;
-}
-
-.activity-box {
-    display: flex;
-    flex-direction: column;
-
-    background-color: red;
-    width: 100px;
-    height: 100%;
-    padding-top: 2%;
-    margin: 2%;
+    }
 
 
-}
+    .itinenary-click-here-fore-more-information {
+        padding-bottom: 5%;
+        font-size: 120%;
+        width: 100%;
 
-.activities-title {
-    margin: 0 auto;
-    color: black;
-}
+    }
 
+    .activities-close {
+        color: red;
+        font-size: 200%;
+    }
 
-.activities-content {
-    background-color: white;
-    color: black;
-    border-radius: 10%;
-    width: 100%;
+    .activity-box {
+        display: flex;
+        flex-direction: column;
 
-
-}
-
-
-.activities-flexer {
-    display: flex;
-    overflow: scroll;
-    height: 100px;
-    width: 100%;
-    flex-direction: column;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    margin-top: 75px;
+        background-color: red;
+        width: 100px;
+        height: 100%;
+        padding-top: 2%;
+        margin: 2%;
 
 
+    }
 
-}
+    .activities-title {
+        margin: 0 auto;
+        color: black;
+    }
 
-.activities-image img {
-    width: 70%;
-    height: 100%;
-}
 
-/* .activities-image{
+    .activities-content {
+        background-color: white;
+        color: black;
+        border-radius: 10%;
+        width: 100%;
+
+
+    }
+
+
+    .activities-flexer {
+        display: flex;
+        overflow: scroll;
+        height: 100px;
+        width: 100%;
+        flex-direction: column;
+        justify-content: flex-end;
+        flex-wrap: wrap;
+
+
+    }
+
+    .activities-image img {
+        width: 70%;
+        height: 100%;
+    }
+
+    /* .activities-image{
     display:inline;
 } */
+
+}
