--- a/client/src/CSS/Activities.css
+++ b/client/src/CSS/Activities.css
@@ -28,6 +28,7 @@
     .activities-close {
         color: red;
         font-size: 200%;
+        margin-bottom: 5%;
     }
 
     .activity-box {
@@ -75,7 +76,8 @@
 
     .activities-image img {
         width: 70%;
-        height: 100%;
+        height: 70px;
+        margin-top: 15%;
     }
 }
 
