--- a/client/src/CSS/Itinerary.css
+++ b/client/src/CSS/Itinerary.css
@@ -130,6 +130,14 @@
     display: none;
   }
 
+  .itinerary-back-to-cities {
+    font-size: 35px;
+    font-weight: bold;
+    margin-top: 2%;
+    text-align: center;
+
+  }
+
   .homeIcon {
     width: 10%;
     margin: 0 auto;
