--- a/client/src/CSS/Itinerary.css
+++ b/client/src/CSS/Itinerary.css
@@ -133,13 +133,18 @@
   .itinerary-back-to-cities {
     font-size: 35px;
     font-weight: bold;
-    margin-top: 2%;
+    margin-top: 0%;
     text-align: center;
+
 
   }
 
+  .itinerary-back-to-cities a {
+    color: black;
+  }
+
   .homeIcon {
-    width: 10%;
+    width: 5%;
     margin: 0 auto;
   }
 
@@ -314,7 +319,7 @@
     color: brown;
   }
 
-  .homeicon-container {
+  .itinerary-homeicon-container {
     grid-row-start: 2;
     grid-row-end: 3;
   }
@@ -364,6 +369,20 @@
     grid-column-start: 5;
     grid-column-end: 6;
     display: flex;
+  }
+
+
+  .itinerary-back-to-cities {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 0%;
+    text-align: center;
+
+
+  }
+
+  .itinerary-back-to-cities a {
+    color: black;
   }
 
   .favourite-itinerary-page {
