--- a/client/src/CSS/Itinerary.css
+++ b/client/src/CSS/Itinerary.css
@@ -1,5 +1,12 @@
 @media only screen and (min-width: 768px) {
 
+  .itinerary-page-container {
+    width: 100%;
+    margin-top: 2%;
+    display: grid;
+    grid-template-rows: 800px 10%;
+  }
+
   .available-mytineraries {
     text-align: center;
     color: red;
@@ -9,17 +16,12 @@
   }
 
 
-  .itinerary-page-container {
-    width: 100%;
-    margin-top: 5%;
-  }
-
   .itinerary-cards-gridmaker {
 
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: 19% 27% 27% 27%;
+    grid-template-columns: 19% 20% 34% 27%;
 
     grid-template-rows: 62.1px 95.3px 30.5px 236px 109.6px auto;
 
@@ -29,6 +31,7 @@
     border-color: firebrick;
     border-radius: 5%;
     margin-bottom: 1%;
+    font-size: 120%;
   }
 
 
@@ -36,6 +39,9 @@
   .itinerary-container {
     width: 100%;
     height: 100%;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    overflow: scroll;
   }
 
   .itinerary-card-flexer {
@@ -69,7 +75,8 @@
     grid-row-end: 2;
     grid-column-start: 2;
     grid-column-end: 5;
-    padding: 5%;
+    padding: 5% 5% 5% 0%;
+
   }
 
   .itinenary-rating {
@@ -77,7 +84,7 @@
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
-    padding: 5%;
+    padding: 0% 5% 0% 0%;
   }
 
   .itinenary-duration {
@@ -85,7 +92,7 @@
     grid-row-end: 3;
     grid-column-start: 3;
     grid-column-end: 4;
-    padding: 5%;
+    padding: 0% 5% 0% 0%;
   }
 
   .itinenary-price {
@@ -93,7 +100,7 @@
     grid-row-end: 3;
     grid-column-start: 4;
     grid-column-end: 5;
-    padding: 5%;
+    padding: 0% 5% 0% 0%;
   }
 
   .itinenary-more-information {
@@ -122,18 +129,18 @@
     color: brown;
   }
 
-  .homeicon-container {
+  .itinerary-homeicon-container {
     grid-row-start: 2;
     grid-row-end: 3;
-    margin-top: 400px;
-    margin-bottom: 2%;
-    display: none;
+
+
   }
 
   .itinerary-back-to-cities {
-    font-size: 35px;
+    font-size: 135%;
+
     font-weight: bold;
-    margin-top: 0%;
+    margin-top: 2%;
     text-align: center;
 
 
@@ -141,11 +148,13 @@
 
   .itinerary-back-to-cities a {
     color: black;
+
   }
 
   .homeIcon {
     width: 5%;
-    margin: 0 auto;
+    margin-left: 20%;
+    margin-bottom: 5%;
   }
 
   .profile-picture {
@@ -195,16 +204,22 @@
     display: flex;
   }
 
-  .favourite-itinerary-page {
+  .itinerary-favourite-itinerary-page {
     font-weight: bold;
     text-align: center;
-    font-size: 125%;
+    font-size: 135%;
+    color: black;
+
 
   }
 
-  .favourite-itinerary-page a {
+  .itinerary-favourite-itinerary-page a {
+
+    color: blue;
+  }
+
+  .to-itinerary-page a {
     color: black;
-    font-size: 135%;
   }
 }
 
@@ -266,7 +281,7 @@
     grid-row-end: 2;
     grid-column-start: 2;
     grid-column-end: 5;
-    padding: 5%;
+    padding: 5% 5% 5% 0%;
   }
 
   .itinenary-rating {
@@ -274,7 +289,7 @@
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
-    padding: 5%;
+    padding: 5% 5% 5% 0%;
   }
 
   .itinenary-duration {
@@ -282,7 +297,7 @@
     grid-row-end: 3;
     grid-column-start: 3;
     grid-column-end: 4;
-    padding: 5%;
+    padding: 5% 5% 5% 0%;
   }
 
   .itinenary-price {
@@ -290,7 +305,7 @@
     grid-row-end: 3;
     grid-column-start: 4;
     grid-column-end: 5;
-    padding: 5%;
+    padding: 5% 5% 5% 0%;
   }
 
   .itinenary-more-information {
@@ -373,7 +388,7 @@
 
 
   .itinerary-back-to-cities {
-    font-size: 22px;
+    font-size: 120%;
     font-weight: bold;
     margin-top: 0%;
     text-align: center;
@@ -385,14 +400,20 @@
     color: black;
   }
 
-  .favourite-itinerary-page {
+  .itinerary-favourite-itinerary-page {
     font-weight: bold;
     text-align: center;
     font-size: 120%;
 
   }
 
-  .favourite-itinerary-page a {
-    color: black
+  .itinerary-favourite-itinerary-page a {
+
+    color: blue;
   }
+
+  .to-itinerary-page a {
+    color: black;
+  }
+
 }
