--- a/client/src/CSS/Itinerary.css
+++ b/client/src/CSS/Itinerary.css
@@ -205,6 +205,7 @@
   }
 
   .itinerary-favourite-itinerary-page {
+
     font-weight: bold;
     text-align: center;
     font-size: 135%;
@@ -404,6 +405,7 @@
     font-weight: bold;
     text-align: center;
     font-size: 120%;
+    margin-top: 2%;
 
   }
 
